[package]
name = "dux-agent"
version = "0.1.3"
edition = "2021"

[dependencies]
serde = {version = "1.0.209", features= ["derive"]}
config = "0.14.0"
clap = { version = "4.5.9", features = ["derive"] }
duxcore = "0.1.9"
tokio = { version = "1.40.0", features = ["full"] }
reqwest = "0.12.7"

[profile.release]
lto = true
